--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.6.0",
-    "@svgr/webpack": "^5.5.0",
-    "@types/js-yaml": "^4.0.0",
-    "date-fns": "^2.19.0",
+    "@mapbox/rehype-prism": "^0.5.0",
+    "@svgr/webpack": "^5.4.0",
+    "@types/js-yaml": "^3.12.5",
+    "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
-    "js-yaml": "^4.0.0",
-    "next": "^10.0.0",
-    "next-mdx-enhanced": "^5.0.0",
+    "js-yaml": "^3.14.0",
+    "next": "9.5.1",
+    "next-mdx-enhanced": "^3.1.0",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-instagram-embed": "^2.0.0",
-    "react-schemaorg": "^1.3.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-instagram-embed": "^1.5.0",
+    "react-schemaorg": "^1.2.0",
     "react-twitter-embed": "^3.0.3",
-    "react-youtube": "^7.13.1",
-    "schema-dts": "^0.8.2"
+    "react-youtube": "^7.11.3",
+    "schema-dts": "^0.6.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.0",
-    "jest": "^26.5.0",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.2.3",
+    "@types/jest": "^26.0.9",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "jest": "^26.3.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "^3.8.3",
     "yaml-loader": "^0.6.0"
   }
 }
