--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "js-yaml": "^3.14.0",
-    "next": "9.5.1",
+    "next": "^9.5.1",
     "next-mdx-enhanced": "^3.1.0",
     "normalize.css": "^8.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-instagram-embed": "^1.5.0",
     "react-schemaorg": "^1.2.0",
     "react-twitter-embed": "^3.0.3",
